force-app/main/default/objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <label>Holiday</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holiday</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>