force-app/main/default/objects/Holiday__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>startDate</label>
    <type>DateTime</type>
</CustomField>