force-app/main/default/objects/Holiday__c/fields/used__c.field-meta.xml
<CustomField>
    <fullName>used__c</fullName>
    <label>used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>