force-app/main/default/objects/Holiday__c/fields/useDate__c.field-meta.xml
<CustomField>
    <fullName>useDate__c</fullName>
    <label>useDate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>