force-app/main/default/objects/Holiday__c/fields/user__c.field-meta.xml
<CustomField>
    <fullName>user__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>user</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HolidayUser</relationshipName>
    <type>Lookup</type>
</CustomField>